--- a/PAIS-WS/.env
+++ b/PAIS-WS/.env
@@ -1,2 +1,2 @@
-DISCORD_BOT_TOKEN="MTEyMDA3MzU0MjM2NTYxNDE0MQ.GciZHy.nqOLWGfiFcqMd3Uutn3mM_qIFJpd5DdoMSgcFE"
+DISCORD_BOT_TOKEN="MTEyMDA3MzU0MjM2NTYxNDE0MQ.GgKx-2.CcyHkZJEjqMqoN-h18UggwMcOa6iASAql63V0E"
 MONGODB_URI="mongodb+srv://admin:admin@cluster0.tlq7ewv.mongodb.net/"
