--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
-DISCORD_BOT_TOKEN="MTEyMDA3MzU0MjM2NTYxNDE0MQ.GZQBCF.y9mz-8FT95h2rUVVbvXgs_3TMdu9szu02S-koI"
+DISCORD_BOT_TOKEN="MTEyMDA3MzU0MjM2NTYxNDE0MQ.GCcjf7.GwM-s4rWFHFeN_RIEGm-MAwy2q41HXRnFv-Y0o"
 MONGODB_URI="mongodb+srv://admin:admin@cluster0.tlq7ewv.mongodb.net/"
