--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
-DISCORD_BOT_TOKEN="MTEyMDA3MzU0MjM2NTYxNDE0MQ.GCcjf7.GwM-s4rWFHFeN_RIEGm-MAwy2q41HXRnFv-Y0o"
+DISCORD_BOT_TOKEN="MTEyMDA3MzU0MjM2NTYxNDE0MQ.G6L_G4.KwWxSA0ARAUj7pZN5opQ7_ATSvo939hwukYYY4"
 MONGODB_URI="mongodb+srv://admin:admin@cluster0.tlq7ewv.mongodb.net/"
